# Gimli

./: README
gimli/: .gitignore  MANIFEST  Makefile  README  Setup.lhs  TODO  gimli.cabal  test-gimli.hs
gimli/eg/examples-from-dan/: example1.giml  example1.gimli  file1.wsv  file1NA.wsv  file1NAdup.wsv  file3.wsv  mfile1.wsv  mfile2.wsv  ped.wsv
gimli/script/: smoke
gimli/src/: CoreTypes.hs  DataMapRead.hs  Eval.hs  EvalKernel.hs  EvalMonad.hs  Expr.hs  ExprParser.hs  GList.hs  Glob.hs  HasNames.hs  Join.hs  Lexer.hs  LoadData.hs  Main.hs  Name.hs  PPrint.hs  Parser.hs  Primatives.hs  Primitives.hs  Scalar.hs  Shell.hs  SourcePos.hs  Table.hs  Utils.hs  Value.hs  Vector.hs  Version.hs
gimli/src/CSV/: Export.hs  Parser.hs
gimli/src/TSV/: Parser.hs
gimli/src/WSV/: Parser.hs
gimli/test/: 01-sanity.t  01-shell.t  expr.t  formating.t  functions.t  inspect.t  joins.t  list.t  load-data.t  primitives.t  read-write.t  sanity.t  shell.t  specials.t  state.t  table.t  vector.t
gimli/test/lib/: RunGimli.pm
user-guide/: Makefile  gimli-user-guide.ltx  manual-id-merge.txt
